plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  // Database
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'mysql:mysql-connector-java:8.0.33'
  implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
  implementation 'org.flywaydb:flyway-mysql:10.14.0'
  implementation 'org.flywaydb:flyway-core:10.14.0'
  
  // Security + JWT library
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'io.jsonwebtoken:jjwt:0.12.5'  

  // MapStruct for mapping
  implementation 'org.mapstruct:mapstruct:1.5.5.Final'
  annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

  // Jakarta Bean Validation (Hibernate Validator)
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
  implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'

  // Email
  implementation 'org.springframework.boot:spring-boot-starter-mail'

  // Amazon S3
  implementation 'software.amazon.awssdk:s3:2.30.16' // or latest version
}

tasks.named('test') {
	useJUnitPlatform()
}
